fix nav vertical spacing, segment header sizes, & warm up header

--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -13,6 +13,7 @@
     width: 100.5%;
     background: linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
                 url(../../static/hero.jpg);
+    filter: saturate(2) sepia(0.4);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center +45%;
